Fix default align graphical elements

--- a/godlike.scss
+++ b/godlike.scss
@@ -131,6 +131,12 @@ img, svg, embed, object, iframe, video, audio, canvas {
     border: 0;
 }
 
+// Fix align graphical elements
+img, embed, object, iframe, video {
+    display: block;
+    margin: auto;
+}
+
 // Fix Firefox transform scale image bug
 img {
     image-rendering: optimizeQuality;
@@ -288,12 +294,6 @@ td, th {
 //    p:not(:empty) {
 //        margin-top: .7em;
 //        margin-bottom: .7em;
-//    }
-//
-//    // Fix align graphical elements
-//    img, embed, object, iframe, video {
-//        display: block;
-//        margin: auto;
 //    }
 //
 //    // Fix display
